--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link href="bootstrap-1.3.0.css" rel="stylesheet">
 	<link href="series.css" rel="stylesheet">
+	<meta name="apple-mobile-web-app-capable" content="yes">
   </head>
 
   <body>
@@ -35,5 +36,18 @@
 	<script src="jquery-1.6.4.js"></script>
 	<script src="data.json"></script>
 	<script src="series.js"></script>
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-26466641-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
   </body>
 </html>
